2015-10-08  6.9.2-4 Dirk Lemstra <dirk@lem.....org>
  * Fixed accessing subimage in a TIFF photoshop layer (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=28469).

2015-09-25  6.9.2-4 Eric McConville <emcconville@emccon...>
  * Created Manhattan Interpolate method for -sparse-color (reference
    https://github.com/ImageMagick/ImageMagick/pull/36).

2015-09-22  6.9.2-4 Cristy  <quetzlzacatenango@image...>
  * Prevent null pointer access (reference
    https://github.com/ImageMagick/ImageMagick/pull/34).
  * Specify histogram code image format implictedly (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=28412).
  * Don't round up for JPEG image resolution (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=1&t=28422).
  * Read the whole image @ image.jp2[0] or an individual tile @ image.jp2[1],
    image.jp2[2].
  * The -caption option no longer fails for filenames with @ prefix (reference
    https://github.com/ImageMagick/ImageMagick/issues/43).
  * Honor $XDG_CONFIG_HOME and $XDG_CACHE_HOME (reference
    https://github.com/ImageMagick/ImageMagick/issues/44).

2015-09-19  6.9.2-3 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.2-3, GIT revision 10235:c40ee57:20150919

2015-09-17  6.9.2-2 Dirk Lemstra <dirk@lem.....org>
  * Added extra checks to avoid out of bounds error when parsing the 8bim 
    profile (reference https://github.com/ImageMagick/ImageMagick/issues/31).
  * Fixed size of memory allocation in RLE coder to avoid segfault (reference
    https://github.com/ImageMagick/ImageMagick/issues/32).

2015-09-16  6.9.2-2 Cristy  <quetzlzacatenango@image...>
  * Add Bootstrap MIT license to ImageMagick web CSS and JS.
  * Use modern idiom for autoconf
    Fix a forgotten dir when regenerating html doc (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=28363).
  * The -colorspace gray option no long leaves a ghostly shadow (reference